testsuite/tests/module/mod48.stderr

mod48.hs:5:3: error: [GHC-69248]
    Pattern bindings (except simple variables) not allowed in class declaration:
      (x, y) = error "foo"
